# metalbot

./: .gitattributes  .gitignore  Gemini.md  README.md
.ai-context/: achievements.md  chat.md  chat.txt  coordinate-systems.md  lidar-depth-design.md  plan.md  task.md  walkthrough.md
docs/superpowers/plans/: 2026-03-31-arkit-velocity-ttc-constant-speed-planner.md
firmware/learning-motor-ctrl/: README.md
firmware/learning-motor-ctrl/.ai-context/: implementation_plan.md  walkthrough.md
firmware/learning-motor-ctrl/scripts/: run_combined.sh  run_motor.sh  run_servo.sh  stop_combined.sh  stop_motor.sh  stop_servo.sh
firmware/learning-motor-ctrl/tools/: arduino-cli.yaml  common.sh  setup_env.sh
firmware/metalbot-arduino/: README.md  deploy.sh  metalbot-arduino.ino
firmware/metalbot-arduino/tools/: arduino-cli.yaml
firmware/raspberry-pi-mcp/: CHANGELOG.md  CMakeLists.txt  README.md  deploy.sh
firmware/raspberry-pi-mcp/src/: dashboard.cpp  dashboard.h  main.cpp  mcp_status.h  network_server.cpp  network_server.h  protocol.cpp  protocol.h  serial_forwarder.cpp  serial_forwarder.h
firmware/raspberry-pi-mcp/tests/: protocol_test.cpp
firmware/stm32-mcp/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  stm32-mcp.ioc
firmware/stm32-mcp/BLE/ble_services/: svc_ctl.c
firmware/stm32-mcp/Core/Inc/: ble_config.h  main.h
firmware/stm32-mcp/Core/Src/: ble_app.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
firmware/stm32-mcp/Drivers/CMSIS/Include/: cmsis_gcc.h  cmsis_version.h  core_armv81mml.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm23.h  core_cm3.h  core_cm35p.h
firmware/stm32-mcp/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32l4xx_hal.h  stm32l4xx_hal_adc.h  stm32l4xx_hal_adc_ex.h  stm32l4xx_hal_can.h  stm32l4xx_hal_comp.h  stm32l4xx_hal_conf_template.h  stm32l4xx_hal_cortex.h  stm32l4xx_hal_crc.h  stm32l4xx_hal_crc_ex.h  stm32l4xx_hal_cryp.h  stm32l4xx_hal_cryp_ex.h  stm32l4xx_hal_dac.h  stm32l4xx_hal_dac_ex.h  stm32l4xx_hal_dcmi.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dfsdm.h  stm32l4xx_hal_dfsdm_ex.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma2d.h  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_dsi.h  stm32l4xx_hal_exti.h  stm32l4xx_hal_firewall.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_flash_ex.h  stm32l4xx_hal_flash_ramfunc.h  stm32l4xx_hal_gfxmmu.h  stm32l4xx_hal_gpio.h  stm32l4xx_hal_gpio_ex.h  stm32l4xx_hal_hash.h  stm32l4xx_hal_hash_ex.h  stm32l4xx_hal_hcd.h  stm32l4xx_hal_i2c.h  stm32l4xx_hal_i2c_ex.h  (+79 more)
firmware/stm32-mcp/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmware/stm32-mcp/cmake/stm32cubemx/: CMakeLists.txt
metalbot-ios/: CHANGELOG.md  README.md  build.sh  project.yml
metalbot-ios/Resources/: Info.plist
metalbot-ios/Sources/Agent/: GatewayBridge.swift  KeywordInterpreter.swift  TelegramGateway.swift
metalbot-ios/Sources/Capture/: ARKitPoseViewModel.swift  ESCBleManager.swift  MCPTestViewModel.swift  STM32BleManager.swift  SelfDrivingViewModel.swift
metalbot-ios/Sources/Planner/: PlannerOrchestrator.swift
metalbot-ios/Sources/Planner/Safety/: DESIGN.md  SafetySupervisor.swift
metalbot-ios/Sources/Views/: ARKitPoseView.swift  AgentDebugView.swift  CommonViews.swift  DepthCaptureView.swift  HomeView.swift  MCPTestView.swift  MapManagerView.swift  PoseMapView.swift  STM32ControlView.swift  SelfDrivingView.swift
metalbot-ios/Tests/Agent/: KeywordInterpreterTests.swift  TelegramGatewayTests.swift
metalbot-ios/Tests/Capture/: MCPProtocolTests.swift
metalbot-mcp/: CHANGELOG.md  CMakeLists.txt  README.md  deploy.sh
metalbot-mcp/src/: dashboard.cpp  dashboard.h  main.cpp  mcp_status.h  network_server.cpp  network_server.h  protocol.cpp  protocol.h  serial_forwarder.cpp  serial_forwarder.h
metalbot-mcp/tests/: protocol_test.cpp
prototypes/esc_telemetry/: .gitignore  README.md  build.sh  esc_app.swift  main.swift  project.yml
prototypes/esc_telemetry/Sources/: ESCScannerApp.swift  ESCScannerView.swift
(+614 files in other folders)
